--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="css/preloader.css">
   <title>INNERVE 2022</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv = "refresh" content = "5; url = html\landing.html" />
 </head>
 
 <body>
